# seg-mllm

./: .gitignore  README.md  chainlit.md  chainlit_app.py  main.py  pyproject.toml
.chainlit/: config.toml
seg_mllm/: __init__.py  config.py
seg_mllm/contracts/: __init__.py  llm.py  perception.py
seg_mllm/integrations/: __init__.py  chainlit_media.py  chainlit_ollama_stream.py
seg_mllm/media/: __init__.py  io.py  overlay.py
seg_mllm/prompts/: __init__.py  agent_prompts.py
seg_mllm/services/: __init__.py  agentic_ollama.py  falcon_perception.py  ollama_llm.py  ollama_runtime.py  ollama_vision_models.py  task_agent.py
